--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,3 +1,3 @@
-@import "./base/reset.scss";
-@import "./layout/header.css";
-@import "./layout/footer.css";
+@import "./base/reset";
+@import "./layout/header";
+@import "./layout/footer";
