--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -1,3 +1,25 @@
 .navbar {
-    background-color: #fe9cd6;
+    // background: rgb(96, 69, 198);
+    // background: linear-gradient(0deg, rgba(96, 69, 198, 1) 0%, rgba(182, 123, 255, 1) 100%);
+    background: rgb(131, 206, 250);
+    background: linear-gradient(0deg, rgba(131, 206, 250, 1) 0%, rgba(83, 178, 253, 1) 100%);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
+    box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
+
+    // background: rgb(131, 206, 250);
+    // background: linear-gradient(0deg, rgba(131, 206, 250, 1) 0%, rgba(83, 178, 253, 1) 13%, rgba(34, 159, 239, 1) 47%, rgba(3, 102, 196, 1) 100%);
+
+    // .nav-link {
+    //     color: white;
+    //     font-size: 2em;
+    // }
+    a {
+        color: white;
+        font-size: medium;
+    }
+
+    .nav-link.active {
+        background: rgba(34, 159, 239, 1);
+    }
 }
