--- a/public/css/main.css
+++ b/public/css/main.css
@@ -337,10 +337,27 @@ template {
   display: none;
 }
 
+.jumbotron {
+  margin-bottom: 0;
+  background: #21004f;
+  background: linear-gradient(90deg, #21004f 0%, #00d5ff 100%);
+  height: 33vh;
+  margin-top: 58px;
+}
+
+.jumbotron h1 {
+  color: white;
+  font-size: xx-large;
+}
+
 .navbar {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
   background: #83cefa;
   background: linear-gradient(0deg, #83cefa 0%, #53b2fd 100%);
-  box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
+  box-shadow: 0px 2px 10px 2px rgba(0, 117, 209, 0.75);
 }
 
 .navbar a {
@@ -353,7 +370,9 @@ template {
 }
 
 footer {
-  position: bottom;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
   height: 50px;
   background: #6045c6;
   background: linear-gradient(0deg, #6045c6 0%, #b67bff 100%);
