--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -1,11 +1,29 @@
+.jumbotron {
+    margin-bottom: 0;
+    background: rgb(33, 0, 79);
+    background: linear-gradient(90deg, rgba(33, 0, 79, 1) 0%, rgba(0, 213, 255, 1) 100%);
+    height: 33vh;
+    margin-top: 58px;
+
+    h1 {
+        color: white;
+        font-size: xx-large;
+    }
+}
+
 .navbar {
     // background: rgb(96, 69, 198);
     // background: linear-gradient(0deg, rgba(96, 69, 198, 1) 0%, rgba(182, 123, 255, 1) 100%);
+    top: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+
     background: rgb(131, 206, 250);
     background: linear-gradient(0deg, rgba(131, 206, 250, 1) 0%, rgba(83, 178, 253, 1) 100%);
-    -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
-    -moz-box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
-    box-shadow: 0px 0px 10px 2px rgba(0, 117, 209, 0.75);
+    -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 117, 209, 0.75);
+    -moz-box-shadow: 0px 2px 10px 2px rgba(0, 117, 209, 0.75);
+    box-shadow: 0px 2px 10px 2px rgba(0, 117, 209, 0.75);
 
     // background: rgb(131, 206, 250);
     // background: linear-gradient(0deg, rgba(131, 206, 250, 1) 0%, rgba(83, 178, 253, 1) 13%, rgba(34, 159, 239, 1) 47%, rgba(3, 102, 196, 1) 100%);
