--- a/public/css/main.css
+++ b/public/css/main.css
@@ -339,9 +339,8 @@ template {
 
 .jumbotron {
   margin-bottom: 0;
-  background: #21004f;
-  background: linear-gradient(90deg, #21004f 0%, #00d5ff 100%);
-  height: 33vh;
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+  height: 50vh;
   margin-top: 58px;
 }
 
