--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -1,8 +1,9 @@
 .jumbotron {
     margin-bottom: 0;
-    background: rgb(33, 0, 79);
-    background: linear-gradient(90deg, rgba(33, 0, 79, 1) 0%, rgba(0, 213, 255, 1) 100%);
-    height: 33vh;
+    // background: rgb(33, 0, 79);
+    // background: linear-gradient(90deg, rgba(33, 0, 79, 1) 0%, rgba(0, 213, 255, 1) 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    height: 50vh;
     margin-top: 58px;
 
     h1 {
