--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/reset";
 @import "./layout/header";
 @import "./layout/footer";
+@import "./layout/productCards";
 
 .logo {
     height: 2em;
