--- a/public/css/main.css
+++ b/public/css/main.css
@@ -368,16 +368,6 @@ template {
   background: #229fef;
 }
 
-footer {
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-  height: 50px;
-  background: #6045c6;
-  background: linear-gradient(0deg, #6045c6 0%, #b67bff 100%);
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
-}
-
 .card-product .img-wrap {
   border-radius: 3px 3px 0 0;
   overflow: hidden;
@@ -401,6 +391,11 @@ footer {
 .card-product .bottom-wrap {
   padding: 15px;
   border-top: 1px solid #eee;
+}
+
+.card-product {
+  border: none;
+  box-shadow: 0px 2px 5px 3px rgba(59, 47, 92, 0.25);
 }
 
 .logo {
