--- a/public/sass/layout/_productCards.scss
+++ b/public/sass/layout/_productCards.scss
@@ -22,3 +22,8 @@
     padding: 15px;
     border-top: 1px solid #eee;
 }
+
+.card-product {
+    border: none;
+    box-shadow: 0px 2px 5px 3px rgba(59, 47, 92, 0.25);
+}
