--- a/public/css/main.css
+++ b/public/css/main.css
@@ -398,6 +398,20 @@ template {
   box-shadow: 0px 2px 5px 3px rgba(59, 47, 92, 0.25);
 }
 
+.img-wrap {
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+  position: relative;
+  height: 100px;
+  text-align: center;
+}
+
+.img-wrap img {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+
 .logo {
   height: 2em;
   width: 2em;
