--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./layout/header";
 @import "./layout/footer";
 @import "./layout/productCards";
+@import "./layout/cart";
 
 .logo {
     height: 2em;
