Start build cart

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -412,6 +412,14 @@ template {
   object-fit: cover;
 }
 
+.productDescription {
+  font-size: 80%;
+}
+
+.productName {
+  font-size: 80%;
+}
+
 .logo {
   height: 2em;
   width: 2em;
