--- a/public/sass/layout/_cart.scss
+++ b/public/sass/layout/_cart.scss
@@ -11,3 +11,12 @@
     max-width: 100%;
     object-fit: cover;
 }
+
+
+.productDescription {
+    font-size: 80% margin: 0;
+}
+
+.productName {
+    font-size: 80% margin: 0;
+}
