--- a/public/sass/layout/_cart.scss
+++ b/public/sass/layout/_cart.scss
@@ -1,4 +1,7 @@
 .img-wrap {
+
+    margin-right: 1em;
+
     border-radius: 3px 3px 0 0;
     overflow: hidden;
     position: relative;
@@ -14,9 +17,28 @@
 
 
 .productDescription {
-    font-size: 80% margin: 0;
+    font-size: 80%;
+    margin: 0;
 }
 
 .productName {
-    font-size: 80% margin: 0;
+    font-size: 80%;
+    margin: 0;
+
+}
+
+.rowProduct {
+    margin: 1em;
+    padding: 1em;
+    border-bottom: 1px solid #7786ad;
+}
+
+.rowProduct .container {
+    padding: 0;
+    margin-top: 1em;
+}
+
+.col-xs {
+    margin: 1em;
+    padding: 1em;
 }
