--- a/public/sass/layout/_productCards.scss
+++ b/public/sass/layout/_productCards.scss
@@ -21,6 +21,7 @@
 .card-product .bottom-wrap {
     padding: 15px;
     border-top: 1px solid #eee;
+    box-shadow: 0px 2px 5px 3px rgba(59, 47, 92, 0.25);
 }
 
 .card-product {
