--- a/public/css/main.css
+++ b/public/css/main.css
@@ -400,7 +400,7 @@ template {
 }
 
 .img-wrap {
-  margin-right: 1em;
+  margin: 1em;
   border-radius: 3px 3px 0 0;
   overflow: hidden;
   position: relative;
@@ -438,6 +438,15 @@ template {
 .col-xs {
   margin: 1em;
   padding: 1em;
+}
+
+#empty-cart-message {
+  visibility: visible;
+}
+
+#checkout-form {
+  visibility: hidden;
+  height: 0;
 }
 
 .logo {
