--- a/public/sass/layout/_cart.scss
+++ b/public/sass/layout/_cart.scss
@@ -1,7 +1,6 @@
 .img-wrap {
 
-    margin-right: 1em;
-
+    margin: 1em;
     border-radius: 3px 3px 0 0;
     overflow: hidden;
     position: relative;
@@ -41,4 +40,13 @@
 .col-xs {
     margin: 1em;
     padding: 1em;
+}
+
+#empty-cart-message {
+    visibility: visible;
+}
+
+#checkout-form {
+    visibility: hidden;
+    height: 0;
 }
