Place labels on top of the input

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -441,12 +441,11 @@ template {
 }
 
 #empty-cart-message {
-  visibility: visible;
+  display: block;
 }
 
 #checkout-form {
-  visibility: hidden;
-  height: 0;
+  display: none;
 }
 
 .logo {
