--- a/public/sass/layout/_cart.scss
+++ b/public/sass/layout/_cart.scss
@@ -43,10 +43,9 @@
 }
 
 #empty-cart-message {
-    visibility: visible;
+    display: block;
 }
 
 #checkout-form {
-    visibility: hidden;
-    height: 0;
+    display: none;
 }
