--- a/public/css/main.css
+++ b/public/css/main.css
@@ -399,6 +399,10 @@ template {
   box-shadow: 0px 2px 5px 3px rgba(59, 47, 92, 0.25);
 }
 
+figcaption {
+  padding: 1em;
+}
+
 .img-wrap {
   margin: 1em;
   border-radius: 3px 3px 0 0;
@@ -438,6 +442,8 @@ template {
 .col-xs {
   margin: 1em;
   padding: 1em;
+  display: flex;
+  align-items: center;
 }
 
 #empty-cart-message {
@@ -446,6 +452,10 @@ template {
 
 #checkout-form {
   display: none;
+}
+
+#submit-button {
+  margin: 1em 0 0 0;
 }
 
 .logo {
