--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,9 @@ body {
    */
 main {
   display: block;
+  max-height: 100%;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 /**
@@ -337,6 +340,10 @@ template {
   display: none;
 }
 
+.header {
+  top: 0;
+}
+
 .jumbotron {
   margin-bottom: 0;
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
@@ -369,10 +376,13 @@ template {
 }
 
 footer {
-  display: block;
-  position: absolute;
   bottom: 0;
   width: 100%;
+  position: fixed;
+}
+
+.container {
+  display: block;
 }
 
 .card-product .img-wrap {
