--- a/public/sass/base/_reset.scss
+++ b/public/sass/base/_reset.scss
@@ -12,6 +12,9 @@ html {
     /* 1 */
     -webkit-text-size-adjust: 100%;
     /* 2 */
+
+
+
 }
 
 /* Sections
@@ -31,6 +34,12 @@ body {
 
 main {
     display: block;
+
+    //GT:
+    max-height: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    // overflow: hidden;
 }
 
 /**
