--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,8 +26,6 @@ body {
    */
 main {
   display: block;
-  margin-top: 100px;
-  margin-bottom: 56px;
 }
 
 /**
@@ -477,5 +475,10 @@ figcaption {
 .logo {
   height: 2em;
   width: 2em;
+}
+
+main {
+  margin-top: 100px;
+  margin-bottom: 56px;
 }
 /*# sourceMappingURL=main.css.map */
